Fix overflow

--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -10,6 +10,7 @@
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  overflow-y: auto;
 
   &.current,
   &.animate {
